started thinking about results section

--- a/content.tex
+++ b/content.tex
@@ -13,9 +13,14 @@
 
 \input{results}
 
-% \input{hazard_analysis_results}
+% Temporary stuff
+% ---------------
 
-% \input{discussion_of_results}
+\input{hazard_analysis_results}
+
+\input{Hazard_calculation.tex}
+
+\input{discussion_of_results}
 
 % \input{conclusion}    
 
