--- a/references.bib
+++ b/references.bib
@@ -706,15 +706,14 @@
 @Article{Lapajne1997,
   Title                    = {Spatially smoothed seismicity modeling of seismic hazard in {S}lovenia},
   Author                   = {Lapajne, Janez K and Motnikar, Barbara Sket and Zabukovec, Blaz and Zupancic, Polona},
-  Journal                  = {Journal of seismology},
+  Journal                  = {Journal of Seismology},
   Year                     = {1997},
   Number                   = {1},
   Pages                    = {73--85},
   Volume                   = {1},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1023/A:1009783602054},
+  Publisher                = {Springer}
 }
 
 @InProceedings{Mahdi_2004_WCEE,
