--- a/results.tex
+++ b/results.tex
@@ -1,3 +1,4 @@
 
 \section{Results}
 
+The PGA hazard maps have been computed for a 10\% and 2\% exceedance probability in 50 years, corresponding to a return period of 475 and 2475 years, from gridded values of historical and instrumental seismic activity. These levels of exceedance are a standard practice in seismic designs \citep{BHRC2014}.
