baby steps towards cleaning material for use in resutls section

--- a/hazard_analysis_results.tex
+++ b/hazard_analysis_results.tex
@@ -6,9 +6,13 @@
 
 % We calculated the $a-values$ for each cell and spatially smoothed over a grid of $0.1 \times 0.1$ in latitude and longitude. We assume magnitude increment as $\Delta_M = 0.1$. In this model, events are not assigned to specific faults and are assumed to be potential seismogenic sources, and are spatially gridded to cells.
 
-Different correlation distances have been used in different studies, which are generally dependent on the accuracy of the location of the recorded earthquakes. \citet{Frankel1995} and \citet{Boyd2008} assumed the correlation distance to be 50 $km$. \citet{Barani2007} used distance of 25 $km$ based on previous studies that suggested the correlation function of the Alps and Apennines in Italy. \citet{Foteva2006} used 10 and 15 km in a different model. Correlation distance is a very sensitive parameter in smoothed seismic hazard maps, and it is a factor of uncertainty in earthquake location.
+% Different correlation distances have been used in different studies, which are generally dependent on the accuracy of the location of the recorded earthquakes. \citet{Frankel1995} and \citet{Boyd2008} assumed the correlation distance to be 50 $km$. \citet{Barani2007} used distance of 25 $km$ based on previous studies that suggested the correlation function of the Alps and Apennines in Italy. \citet{Foteva2006} used 10 and 15 km in a different model. Correlation distance is a very sensitive parameter in smoothed seismic hazard maps, and it is a factor of uncertainty in earthquake location.
 
-Regarding the important parameters in determining the location of earhtquake (e.g. velocity model, station distribution, number and quality of seismic phases),\citet{Mirzaei1997} believes the uncertainties of the most reliable epicenters are probably at least 10 km. In developing of seismic hazard zoning map for Iran,\citet{Zare2012} considered the epicentral uncertainty as 30 km. Even though the uncertainties are different for different events in terms of instrumental or historical events, in this study we assumed the correlation distance as 30 km because of the lack of knowledge about other historical events. Regarding the study domain and the 0.1 grid size, the total number of source as grid points is 13561. Even though \citet{Kalkan2004} derived the attenuation relationship up to 250 km, since \citet{Zafarani2014} used data up to 200 km to evaluate the GMPEs, we set the model to compute the ground motions at distances of less than 200 km.
+% Regarding the important parameters in determining the location of earhtquake (e.g. velocity model, station distribution, number and quality of seismic phases),\citet{Mirzaei1997} believes the uncertainties of the most reliable epicenters are probably at least 10 km. In developing of seismic hazard zoning map for Iran,\citet{Zare2012} considered the epicentral uncertainty as 30 km. Even though the uncertainties are different for different events in terms of instrumental or historical events, in this study we assumed the correlation distance as 30 km because of the lack of knowledge about other historical events. 
+
+Regarding the study domain and the 0.1 grid size, the total number of source as grid points is 13561. 
+
+% Even though \citet{Kalkan2004} derived the attenuation relationship up to 250 km, since \citet{Zafarani2014} used data up to 200 km to evaluate the GMPEs, we set the model to compute the ground motions at distances of less than 200 km.
 
 \subsection{Hazard Curve}
 
