--- a/attenuation.tex
+++ b/attenuation.tex
@@ -47,6 +47,7 @@ and $V_A$, $V_S$ and $h$ are
 % 
 respectively. The value of $V_S$ is assumed to represent average surface rock sites.
 
+We should not here that even though \citet{Kalkan2004} derived the above attenuation relationship for distances $r$ up to 250 km, \citet{Zafarani2014} only used data up to 200 km in their evaluation of the various GMPEs available. Therefore, in consistence with \citet{Zafarani2014}, we set the models in the hazard analysis to compute ground motions (i.e., PGAs) at distances no greater than 200 km.
 
 % *********************************************************************************************************************
 % OLD
