--- a/hazard.tex
+++ b/hazard.tex
@@ -24,7 +24,9 @@ In this study we discretize the region of interest into a regular grid with cell
 	\label{eq:nnorm}
 \end{equation}
 % 
-where $\tilde{n}_i$ is the smoothed, normalized number of events in cell $i$, $\Delta_{ij}$ is the distance between the $i$-th and $j$-th cells, and $c$ is the correlation distance. We use a correlation distance of 30 km. The summations in (\ref{eq:nnorm}) are calculated over the number of $j$ cells within a distance $3c$ from the $i$-th cell. It should be noted that in this process we convert the cumulative number of events to incremental values following \citet{Herrmann1977}. We also note that according to \citet{Frankel1995}, moderate earthquakes generally occur in areas where there have been significant numbers of events with magnitudes $M \geq 3$, thus our interest in having complemented the earthquake catalog for events above this threshold.
+where $\tilde{n}_i$ is the smoothed, normalized number of events in cell $i$, $\Delta_{ij}$ is the distance between the $i$-th and $j$-th cells, and $c$ is the correlation distance. The summations in Eq.~\ref{eq:nnorm} are calculated over the number of $j$ cells within a distance $3c$ from the $i$-th cell. It should be noted that in this process we convert the cumulative number of events to incremental values following \citet{Herrmann1977}. We also note that according to \citet{Frankel1995}, moderate earthquakes generally occur in areas where there have been significant numbers of events with magnitudes $M \geq 3$, thus our interest in having complemented the earthquake catalog for events above this threshold.
+
+It is obvious from Eq.~\ref{eq:nnorm} that an important parameter in smoothing the seismicity is the correlation distance. Different values of $c$ have been used in past studies, ranging between 10 and 50 km. \citet{Frankel1995} and \citet{Boyd2008} assumed $c=50$~km, \citet{Barani2007} used $c=25$~km, and \citet{Foteva2006} used $c=10$ and 15 km. According to \citet{Mirzaei1997}, determining an appropriate value of $c$ depends on the crustal structure of the region, the distribution of stations, and the number and quality of records. We use an intermediate value of $c=30$~km. This selection is consistent with epicentral uncertainty for previous hazard zoning maps for Iran \citep[see][]{Zare2012}.
 
 In turn, we consider the $b$-values to be constant within each seismic zone as delimited in Fig.~\ref{fig:iran}. Details about the calculation of the $b$-value for each zone are provided below. By contrast, in the recent work by \citet{Khodaverdian_2016_BSSA}, the authors computed spatially-variable $b$-values within large grid-cells of size 1\textdegree{} $\times$ 1\textdegree{} based on the average seismicity within a 200-km radius from each cell. While gridding $b$-values and considering the influence of neighboring large-size cells allows to draw information from the background seismicity, it is unavoidable to have the contributing areas cross over seismic zones of different characteristics, which may pollute the computation of $b$-values. Admittedly, these are subjective decisions and any reasonable choice can be considered valid or within the margins of the associated epistemic uncertainty.
 
@@ -40,7 +42,7 @@ Last, the annual rate $\lambda$ of exceeding a reference ground motion $u_o$ is 
 % 
 Here, the values of $\tilde{n}_i$ have been previously binned by their distance from the site of interest, $N_k$ is the total of $\tilde{n}_i$ values for cells within a certain bin distance, $T$ is the time in years used to determine $N_k$, and $k$ and $l$ are the indexes of the distance and magnitude bins, respectively. $P ( u > u_o | D_k , M_l )$ is the probability of $u$ exceeding $u_o$ given an earthquake of magnitude $M_l$ at a distance $D_k$ \citep{Frankel1995}.
 
-It is clear from (\ref{eq:exceed}) that the hazard calculations depends also on the choice of an attenuation relationship to obtain predict the level of ground motion at a site ($u$) for any given earthquake. In the following two sections we describe how we obtained the $b$-values for the different seismic zones influencing the hazard in northern Iran and our choice of a suitable attenuation relationship (ground motion prediction equation).
+It is clear from Eq.~\ref{eq:exceed} that the hazard calculations depend also on the choice of an attenuation relationship to obtain predict the level of ground motion at a site ($u$) for any given earthquake. In the following two sections we describe how we obtained the $b$-values for the different seismic zones influencing the hazard in northern Iran and our choice of a suitable attenuation relationship (ground motion prediction equation).
 
 
 % *********************************************************************************************************************
