fixing table of completeness

--- a/completeness.tex
+++ b/completeness.tex
@@ -17,24 +17,27 @@ Admittedly, the choice of the threshold years is highly subjective. We should no
 
 For the case of the completeness magnitude $M_c$, we adopted the values reported by \citet{Karimiparidari2013}. Our choice the $M_c$ values by \citet{Karimiparidari2013} over those of \citet{Zare2014} is based on the fact that the former distinguishes Azerbaijan and Alborz as individual seismic zones---as we do---as opposed to the approach followed by the latter, in which these two are a single, larger seismic zone. Both the chosen years of completeness and the values of completeness magnitude for each seismic zone and for the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}.
 
-\begin{table}%[t]
+\begin{table*}%[t]
     \centering
-    \caption{Year thresholds and magnitude completeness for the seismic zones within the region of interest in this study.}
-    \begin{tabular}{@{\hspace{0.2ex}}lccccrc@{\hspace{0.2ex}}}
-        \cline{2-7}                                              \\[-1.6ex]
-                        & 3--4 & 4--5 & 5--6 & 6--7 & 
-                                  \multicolumn{1}{c}{$>7$} &$M_c$\\[0.6ex]
-        \hline                                                   \\[-1.6ex]
-        Azerbaijan      & 1961 & 1961 & 1900 & 1581 & 1042 & 4.5 \\
-        Alborz          & 2005 & 1961 & 1900 & 1664 &--401 & 4.4 \\
-        Kopeh Dagh      & 2005 & 1950 & 1924 & 1673 &    9 & 4.5 \\
-        Zagros          & 2005 & 1961 & 1950 & 1853 & 1439 & 4.4 \\
-        Central-East    & 2005 & 1961 & 1900 & 1837 &  762 & 4.5 \\
-        Uniform Model   & 2005 & 1961 & 1900 & 1778 &--401 & 4.5 \\[0.5ex]
+    \caption{Year thresholds and magnitude completeness for the seismic zones within the region of interest in this study. Year of completeness is provided for magnitude ranges between 3 and 7, with $\mathrm{\Delta}M = 1$. The completeness magnitude is provided for the sub-catalogs for three year intervals.}
+    \begin{tabular}{lccccrcccc}
+        \cline{2-10}                                                                                  \\[-1.6ex]
+                        & \multicolumn{5}{c}{Year for $M_w$ ranges} 
+                                                            & & \multicolumn{3}{c}{$M_c$ for sub-catalogs} \\
+        \cline{2-6} \cline{8-10}                                                                      \\[-1.6ex]
+                        & 3--4 & 4--5 & 5--6 & 6--7 & \multicolumn{1}{c}{$>7$} 
+                                                            & & 1800--1899 & 1900--1999 & 2000--2015  \\[0.6ex]
+        \hline                                                                                        \\[-1.6ex]
+        Azerbaijan      & 1961 & 1961 & 1900 & 1581 & 1042  & &     6.0    &     5.0    &     4.2     \\
+        Alborz          & 2005 & 1961 & 1900 & 1664 &--401  & &     6.2    &     5.0    &     3.5     \\
+        Kopeh Dagh      & 2005 & 1950 & 1924 & 1673 &    9  & &     6.1    &     5.0    &     4.0     \\
+        Zagros          & 2005 & 1961 & 1950 & 1853 & 1439  & &     5.3    &     4.8    &     3.9     \\
+        Central-East    & 2005 & 1961 & 1900 & 1837 &  762  & &     5.5    &     4.8    &     4.0     \\
+        Uniform Model   & 2005 & 1961 & 1900 & 1778 &--401  & &     6.1    &     4.8    &     3.8     \\[0.5ex]
         \hline 
     \end{tabular}
     \label{tab:completeness} 
-\end{table}
+\end{table*}
 
 
 % *********************************************************************************************************************
