--- a/references.bib
+++ b/references.bib
@@ -1059,9 +1059,8 @@
   Pages                    = {859--869},
   Volume                   = {90},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1785/0119990114},
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Wyss1999,
