--- a/composition.tex
+++ b/composition.tex
@@ -20,7 +20,7 @@ For the particular case of our region of interest, the catalog prepared by \cite
 
 In terms of magnitude scale, the events in \citet{Zare2014} were converted from $M_L$, $M_s$ and $m_b$ scales to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}. For consistency, we used the same conversion relationships for the portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015. The dataset from IIEES also contained events reported by ISC on a duration magnitude ($M_D$) scale. In these cases we used the empirical relationship introduced by \citet{Deniz2010} to convert $M_D$ to $M_w$. Although this relationship was derived based on a dataset for $M_w \geq 4.5$ events, we extrapolated the equation for lower magnitudes and found the results to adjust well with the general trend. 
 
-Selection and declustering was also done in consistence with the original catalog, using the method of \citet{Gardner1974}. In summary, we obtained the whole catalog version of \citet{Zare2014}, removed the events from 2000 and forward, complemented the catalog with all $M>3$ events up to 2015 from IIEES, and finally declustered the new complemented catalog removing foreshocks and aftershocks. The resulting set of events compiled for this study is shown in Fig.~\ref{fig:catalog}, which shows the spatial distribution within the region of interest for both historical and instrumental events. In turn, Fig.~\ref{fig:scatter} shows the distribution of events in time and magnitude for each of the seismic zones, as well as for the complete region of interest (here referred to as the uniform model).
+Selection and declustering was also done in consistence with the original catalog, using the method of \citet{Gardner1974}. In summary, we obtained the whole catalog version of \citet{Zare2014}, removed the events from 2000 and forward, complemented the catalog with $M>3$ events up to 2015 from IIEES, and finally declustered the new complemented catalog removing foreshocks and aftershocks. The resulting set of events compiled for this study is shown in Fig.~\ref{fig:catalog}, which includes the spatial distribution within the region of interest for both historical and instrumental events; and in Fig.~\ref{fig:scatter}, which presents the distribution of events in time and magnitude for each of the seismic zones, as well as for the complete region of interest (hereafter referred as the uniform model).
 
 \begin{figure*} [t]
 	\centering
