refurbished completeness and parameters sections with new figure 6

--- a/completeness.tex
+++ b/completeness.tex
@@ -8,17 +8,28 @@
 
 \subsection{Completeness}
 
-An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the year of completeness and the completeness magnitude, which are used as parameters in the seismic analysis process. In simple terms, the year of completeness is the point in time at which catalog data exhibit a steady rate of event occurrence or record accumulation. This point is typically identified for different magnitude ranges independently. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line.
+An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the start-year of completeness and the completeness magnitude, which are both parameters that are later used in the seismic analysis process. The start-year of completeness is the point in time at which catalog data exhibit a steady rate of event occurrence or record accumulation for a certain magnitude range, and the completeness magnitude ($M_c$) is the magnitude above which the seismic catalog of a region can be considered complete within a certain time period.
 
-On the other hand, the completeness magnitude ($M_c$) is the minimum magnitude at which the seismic catalog of a region can be considered complete within a certain time period. While the year of completeness can be determined by inspection of the data, the completeness magnitude often requires a numerical analysis of the given catalog. A common approach consists on identifying the magnitude associated with the maximum value of the first derivative of the frequency-magnitude curve. This method is known as the maximum curvature (MAXC) technique. It is widely used and has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East. 
+The start-year of completeness is usually identified by inspection. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line. This is done for different magnitude ranges. Following this approach, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7. Our choices are illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our selection of the year of completeness in each case. The values shown in this figure and those corresponding to the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}. For events $M_w>7$, in which case there are no sufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes. 
 
-An alternative approach is the goodness-of-fit test method introduced by \citet{Wiemer2000}.........
+Determining the completeness magnitude $M_c$, on the other hand, is often determined using simple numerical analysis in combination with data inspection. Two common approaches are maximum curvature and the goodness-of-fit test methods. The maximum curvature method, or MAXC for simplicity, is widely used because as it has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East. We use the goodness-of-fit test method introduced by \citet{Wiemer2000}, and compute $M_c$ for different catalog-time intervals, namely 1800--1899, 1900--1999, 2000--2015, and for the complete regional catalogs.
 
-One of the difficulties in determining completeness is the availability of data for a period of time long enough for all magnitude ranges, so that selection of completeness parameters is reliable. In this study, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7 by inspection, following the approach used by \citet{Frankel1995}. This is illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our choice of the completeness year thresholds in each case. For events $M_w>7$, in which case there are no sufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes. 
+We defined these year intervals based on the data magnitude-time distribution (see Fig.~\ref{fig:scatter}) and the idea of distinguishing between historical, early-instrumental, and modern-instrumental catalogs. Having augmented the original catalog with $M>3$ earthquakes beginning in 2000 also influenced our choice of the intervals because at this point the uniformity of the catalog is altered. No value of $M_c$ was computed for pre-historical (before 1800) data because of scarcity of data. Last, we also computed $M_c$ values for the complete regional catalogs, but in this case, in order to maintain uniformity throughout time, we only considered $M>4$ events. Fig.~\ref{fig:mc} illustrates the selection of $M_c$ for the case of the main three northern Iran seismic regions, and Table \ref{tab:completeness} presents the final selection of $M_c$ values for these and the other regions, including the uniform northern Iran model for the complete region of interest.
 
-Admittedly, the choice of the threshold years is highly subjective. We should note then, that in the process of choosing the points indicated in the plots shown in Fig.~\ref{fig:completeness}, we considered additional contributing information such as the history of instrumentation. It is well known, for instance, that the number of recorded earthquakes increased considerably after the first deployment of seismic instruments in the early 1900s, and later with the establishment of the Worldwide Standardized Seismograph Network in 1961. We also compared our choices with the year thresholds reported by \citet{Zare2014}, which we found to be consistently earlier than our preferred years of completeness. In the end, we proceeded with our selection, which leads to a more conservative estimation of hazard.
+% A common approach consists on identifying the magnitude associated with the maximum value of the first derivative of the frequency-magnitude curve.
 
-For the case of the completeness magnitude $M_c$, we adopted the values reported by \citet{Karimiparidari2013}. Our choice the $M_c$ values by \citet{Karimiparidari2013} over those of \citet{Zare2014} is based on the fact that the former distinguishes Azerbaijan and Alborz as individual seismic zones---as we do---as opposed to the approach followed by the latter, in which these two are a single, larger seismic zone. Both the chosen years of completeness and the values of completeness magnitude for each seismic zone and for the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}.
+% One of the difficulties in determining completeness is the availability of data for a period of time long enough for all magnitude ranges, so that selection of completeness parameters is reliable.
+
+The values of $M_c$ for different time intervals and seismic regions are used to determine the seismicity Gutenberg-Richter parameters $b$ and $M_{\max}$ (see Section \ref{sec:params}), and the $M_c$ values for the whole regional catalogs and the start-years of completeness are used later for computing the hazard. Admittedly, the choice of the start-years is highly subjective. We should note then, that in the process of choosing the points indicated in the plots shown in Fig.~\ref{fig:completeness}, we considered additional contributing information such as the history of instrumentation. It is well known that the number of recorded earthquakes increased considerably after the first deployment of seismic instruments in the early 1900s, and later with the establishment of the Worldwide Standardized Seismograph Network in 1961. We compared our choices with the year thresholds reported by \citet{Zare2014}, which we found to be consistently earlier than our preferred years of completeness. In the end, our selection should lead to a slightly more conservative estimations of hazard. For the case of $M_c$, we compared our results with the values reported by \citet{Karimiparidari2013} and \citet{Khodaverdian_2016_BSSA} and found them to be in general good agreement, despite differences in the spatial definition of the seismic zones.
+
+% Our choice the $M_c$ values by \citet{Karimiparidari2013} over those of \citet{Zare2014} is based on the fact that the former distinguishes Azerbaijan and Alborz as individual seismic zones---as we do---as opposed to the approach followed by the latter, in which these two are a single, larger seismic zone. Both the chosen years of completeness and the values of completeness magnitude for each seismic zone and for the uniform model of the entire region of interest are ....
+
+\begin{figure*}[t]
+    \centering
+    \includegraphics[width=\textwidth]{figures/pdf/figure-06.pdf} 
+    \caption{Pending.}
+    \label{fig:completeness}
+\end{figure*}
 
 \begin{table*}%[t]
     \centering
