Preparing the ground to write the results section

--- a/completeness.tex
+++ b/completeness.tex
@@ -21,8 +21,8 @@ The values of $M_c$ for different time intervals and seismic regions are used to
 \begin{figure*}[t]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-06.pdf} 
-    \caption{Pending.}
-    \label{fig:completeness}
+    \caption{Selection of completeness magnitude ($M_c$) values for the three main seismic regions in northern Iran. The blue squares indicate the computed goodness-of-fit test values and the green circles indicate the cumulative number of events. Both are shown as functions of the earthquake magnitude. The former is plotted in linear scale (left axes) and the latter is plotted in logarithmic scale (right axes). The horizontal dashed lines indicate desired thresholds for the goodness-of-fit values at 80 and 90 percent. The vertical red lines show indicate the chosen $M_c$ values for each zone and catalog year interval.}
+    \label{fig:mc}
 \end{figure*}
 
 \begin{table*}%[t]
