--- a/content.tex
+++ b/content.tex
@@ -16,9 +16,9 @@
 % Temporary stuff
 % ---------------
 
-\input{hazard_analysis_results}
+% \input{hazard_analysis_results}
 
-\input{Hazard_calculation.tex}
+% \input{Hazard_calculation.tex}
 
 \input{discussion_of_results}
 
